update image data
